--- a/tools-frontend/package.json
+++ b/tools-frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
